Layout in progress

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         Engage your clients through compelling visuals that do most of the marketing for you.
         </p>
 
-        <button>Learn more</button>
+        <button>LEARN MORE</button>
         </div>
       </div>
 
@@ -77,7 +77,7 @@
         Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
         </p>
 
-        <button>Learn more</button>
+        <button>LEARN MORE</button>
         </div>
       </div>
 
@@ -112,7 +112,7 @@
 
   <!--Testimonial-->
   <main id="main">
-    <h2>Client testimonials</h2>
+    <h2>CLIENT TESTIMONIALS</h2>
     <div class="client-wraper">
       <div class="client">
         <img src="./images/image-emily.jpg" alt="">
@@ -151,16 +151,16 @@
     </div>
     <nav>
       <div class="logo"><img src="./images/logo.svg"></div>
-      <ul>
+      <ul class="links">
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Projects</a></li>
       </ul>
       <ul class="social-media">
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Instagram</a></li>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Pinterest</a></li>
+        <li><a href="#"><img src="./images/icon-facebook.svg" alt=""></a></li>
+        <li><a href="#"><img src="./images/icon-instagram.svg"></a></li>
+        <li><a href="#"><img src="./images/icon-pinterest.svg"></a></li>
+        <li><a href="#"><img src="./images/icon-twitter.svg"></a></li>
       </ul>
     </nav>
   </footer>
