Mobile layout in progress

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          <img srcset=
           "./images/desktop/image-header.jpg 1440w,
           ./images/mobile/image-header.jpg 375w" alt="header image"
-          src="./images/desktop/image-header.jpg">
+          src="./images/mobile/image-header.jpg">
           <div class="caption">
             <h1>WE ARE CREATIVES</h1>
             <div onclick="scrollMain()">
@@ -47,7 +47,7 @@
       </nav>
     </div>
  
-      <div class="hero-learnmore one">
+      <div class="hero-learnmore one text">
         <div class="hero-learnmore-wraper">
         <h3>
         Transform your brand
@@ -69,7 +69,7 @@
         >
       </div>
 
-      <div class="hero-learnmore two">
+      <div class="hero-learnmore two text">
         <div class="hero-learnmore-wraper">
         <h3>Stand out to the right audience</h3>
 
@@ -89,7 +89,7 @@
       <!--With caption inside-->
       <div class="hero-learnmore-one pic">
         <img srcset="./images/desktop/image-graphic-design.jpg 1440w,
-        ./images/desktop/image-graphic-design.jpg 375w" alt="learn more picture with caption"
+        ./images/mobile/image-graphic-design.jpg 375w" alt="learn more picture with caption"
         src="./images/desktop/image-graphic-design.jpg"
         >
         <div class="caption">
@@ -144,10 +144,22 @@
   <!--Footer-->
   <footer>
     <div class="gallery">
-      <img src="./images/desktop/image-gallery-milkbottles.jpg" alt="">
-      <img src="./images/desktop/image-gallery-orange.jpg" alt="">
-      <img src="./images/desktop/image-gallery-cone.jpg" alt="">
-      <img src="./images/desktop/image-gallery-sugarcubes.jpg" alt="">
+      <img srcset="./images/desktop/image-gallery-milkbottles.jpg 1440w, 
+      ./images/mobile/image-gallery-milkbottles.jpg 375w"
+      src="./images/desktop/image-gallery-milkbottles.jpg" alt=""
+      >
+      <img srcset="./images/desktop/image-gallery-orange.jpg 1440w, 
+      ./images/mobile/image-gallery-orange.jpg 375w"
+      src="./images/desktop/image-gallery-orange.jpg" alt=""
+      >
+      <img srcset="./images/desktop/image-gallery-cone.jpg 1440w, 
+      ./images/mobile/image-gallery-cone.jpg 375w"
+      src="./images/desktop/image-gallery-cone.jpg" alt=""
+      >
+      <img srcset="./images/desktop/image-gallery-sugarcubes.jpg 1440w,
+      ./images/mobile/image-gallery-milkbottles.jpg 375w"
+      src="./images/desktop/image-gallery-sugarcubes.jpg" alt=""
+      >
     </div>
     <nav>
       <div class="logo"><img src="./images/logo.svg"></div>
