--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
      <div class="hero-img">
          <img srcset=
           "./images/desktop/image-header.jpg 1440w,
-          ./images/mobile/image-header.jpg 375w" alt="header image"
+          ./images/mobile/image-header.jpg 850w" alt="header image"
           src="./images/mobile/image-header.jpg">
           <div class="caption">
             <h1>WE ARE CREATIVES</h1>
@@ -38,7 +38,13 @@
         <a href="#">
           <div class="logo"><img src="./images/logo.svg" alt=""></div>
         </a>
+          <a href="#" id="mb-button">
+            <span id="mb-button-bar"></span>
+            <span id="mb-button-bar"></span>
+            <span id="mb-button-bar"></span>
+          </a>
         <ul>
+          <div class="triangle"></div>
           <li><a href="#">About</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">Projects</a></li>
@@ -64,7 +70,7 @@
 
       <div class="hero-learnmore one pic">
         <img srcset="./images/desktop/image-transform.jpg 1440w,
-        ./images/mobile/image-transform.jpg 375w" alt="learn more picture #1"
+        ./images/mobile/image-transform.jpg 750w" alt="learn more picture #1"
         src="./images/desktop/image-transform.jpg"
         >
       </div>
@@ -83,13 +89,13 @@
 
       <div class="hero-learnmore two pic">
         <img srcset="./images/desktop/image-stand-out.jpg 1440w,
-        ./images/mobile/image-stand-out.jpg 375w" alt="learn more picture #2"
+        ./images/mobile/image-stand-out.jpg 750w" alt="learn more picture #2"
         src="./images/desktop/image-stand-out.jpg">
       </div>
       <!--With caption inside-->
       <div class="hero-learnmore-one pic">
         <img srcset="./images/desktop/image-graphic-design.jpg 1440w,
-        ./images/mobile/image-graphic-design.jpg 375w" alt="learn more picture with caption"
+        ./images/mobile/image-graphic-design.jpg 1100w" alt="learn more picture with caption"
         src="./images/desktop/image-graphic-design.jpg"
         >
         <div class="caption">
@@ -99,7 +105,7 @@
       </div>
       <div class="hero-learnmore-two pic">
         <img srcset="./images/desktop/image-photography.jpg 1440w,
-        ./images/mobile/image-photography.jpg 375w" alt="learn more picture with caption"
+        ./images/mobile/image-photography.jpg 1100w" alt="learn more picture with caption"
         src="./images/desktop/image-photography.jpg"
         >
         <div class="caption">
@@ -145,19 +151,19 @@
   <footer>
     <div class="gallery">
       <img srcset="./images/desktop/image-gallery-milkbottles.jpg 1440w, 
-      ./images/mobile/image-gallery-milkbottles.jpg 375w"
+      ./images/mobile/image-gallery-milkbottles.jpg 750w"
       src="./images/desktop/image-gallery-milkbottles.jpg" alt=""
       >
       <img srcset="./images/desktop/image-gallery-orange.jpg 1440w, 
-      ./images/mobile/image-gallery-orange.jpg 375w"
+      ./images/mobile/image-gallery-orange.jpg 750w"
       src="./images/desktop/image-gallery-orange.jpg" alt=""
       >
       <img srcset="./images/desktop/image-gallery-cone.jpg 1440w, 
-      ./images/mobile/image-gallery-cone.jpg 375w"
+      ./images/mobile/image-gallery-cone.jpg 750w"
       src="./images/desktop/image-gallery-cone.jpg" alt=""
       >
       <img srcset="./images/desktop/image-gallery-sugarcubes.jpg 1440w,
-      ./images/mobile/image-gallery-milkbottles.jpg 375w"
+      ./images/mobile/image-gallery-milkbottles.jpg 750w"
       src="./images/desktop/image-gallery-sugarcubes.jpg" alt=""
       >
     </div>
