--- a/index.html
+++ b/index.html
@@ -24,26 +24,25 @@
      <div class="hero-img">
          <img srcset=
           "./images/desktop/image-header.jpg 1440w,
-          ./images/mobile/image-header.jpg 850w" alt="header image"
+          ./images/mobile/image-header.jpg 850w" alt="hero image, an orange slice"
           src="./images/mobile/image-header.jpg">
           <div class="caption">
             <h1>WE ARE CREATIVES</h1>
             <div onclick="scrollMain()">
-              <div>
                 <img src="./images/icon-arrow-down.svg" alt="arrow to main section">
-              </div>
             </div>
          </div>
       <nav>
         <a href="#">
-          <div class="logo"><img src="./images/logo.svg" alt=""></div>
+          <div class="logo"><img src="./images/logo.svg" alt="sunny logo"></div>
         </a>
-          <a href="#" id="mb-button">
+          <a id="mb-button">
             <span id="mb-button-bar"></span>
             <span id="mb-button-bar"></span>
             <span id="mb-button-bar"></span>
           </a>
         <ul>
+          <!--Triangle for the mobile menu-->
           <div class="triangle"></div>
           <li><a href="#">About</a></li>
           <li><a href="#">Services</a></li>
@@ -53,7 +52,7 @@
       </nav>
     </div>
  
-      <div class="hero-learnmore one text">
+      <aside class="hero-learnmore one text">
         <div class="hero-learnmore-wraper">
         <h3>
         Transform your brand
@@ -66,16 +65,16 @@
 
         <button>LEARN MORE</button>
         </div>
-      </div>
+      </aside>
 
-      <div class="hero-learnmore one pic">
+      <aside class="hero-learnmore one pic">
         <img srcset="./images/desktop/image-transform.jpg 1440w,
         ./images/mobile/image-transform.jpg 750w" alt="learn more picture #1"
         src="./images/desktop/image-transform.jpg"
         >
-      </div>
+      </aside >
 
-      <div class="hero-learnmore two text">
+      <aside class="hero-learnmore two text">
         <div class="hero-learnmore-wraper">
         <h3>Stand out to the right audience</h3>
 
@@ -85,34 +84,34 @@
 
         <button>LEARN MORE</button>
         </div>
-      </div>
+      </aside>
 
-      <div class="hero-learnmore two pic">
+      <aside class="hero-learnmore two pic">
         <img srcset="./images/desktop/image-stand-out.jpg 1440w,
         ./images/mobile/image-stand-out.jpg 750w" alt="learn more picture #2"
         src="./images/desktop/image-stand-out.jpg">
-      </div>
+      </aside>
       <!--With caption inside-->
-      <div class="hero-learnmore-one pic">
+      <aside class="hero-learnmore-wcaption-one">
         <img srcset="./images/desktop/image-graphic-design.jpg 1440w,
-        ./images/mobile/image-graphic-design.jpg 1100w" alt="learn more picture with caption"
+        ./images/mobile/image-graphic-design.jpg 1100w" alt="learn more picture with caption #1"
         src="./images/desktop/image-graphic-design.jpg"
         >
         <div class="caption">
           <h3>Graphic Design</h3>
           <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
         </div>
-      </div>
-      <div class="hero-learnmore-two pic">
+      </aside>
+      <aside class="hero-learnmore-wcaption-two">
         <img srcset="./images/desktop/image-photography.jpg 1440w,
-        ./images/mobile/image-photography.jpg 1100w" alt="learn more picture with caption"
+        ./images/mobile/image-photography.jpg 1100w" alt="learn more picture with caption #2"
         src="./images/desktop/image-photography.jpg"
         >
         <div class="caption">
           <h3>Photography</h3>
           <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
         </div>
-      </div>
+      </aside>
     </section>
   </header>
 
@@ -121,7 +120,7 @@
     <h2>CLIENT TESTIMONIALS</h2>
     <div class="client-wraper">
       <div class="client">
-        <img src="./images/image-emily.jpg" alt="">
+        <img src="./images/image-emily.jpg" alt="client Emily picture">
         <p>
           We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
         </p>
@@ -129,7 +128,7 @@
         <h5>Marketin Director</h5>
       </div>
       <div class="client">
-        <img src="./images/image-thomas.jpg" alt="">
+        <img src="./images/image-thomas.jpg" alt="client Thomas picture">
         <p>
           Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
         </p>
@@ -137,7 +136,7 @@
         <h5>Chief Operating Officer</h5>
      </div>
       <div class="client">
-        <img src="./images/image-jennie.jpg" alt="">
+        <img src="./images/image-jennie.jpg" alt="client Jennie picture">
         <p>
           Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
         </p>
@@ -152,33 +151,33 @@
     <div class="gallery">
       <img srcset="./images/desktop/image-gallery-milkbottles.jpg 1440w, 
       ./images/mobile/image-gallery-milkbottles.jpg 750w"
-      src="./images/desktop/image-gallery-milkbottles.jpg" alt=""
+      src="./images/desktop/image-gallery-milkbottles.jpg" alt="gallery picture #1 milk bottles"
       >
       <img srcset="./images/desktop/image-gallery-orange.jpg 1440w, 
       ./images/mobile/image-gallery-orange.jpg 750w"
-      src="./images/desktop/image-gallery-orange.jpg" alt=""
+      src="./images/desktop/image-gallery-orange.jpg" alt="gallery picture #2 orange sliDe"
       >
       <img srcset="./images/desktop/image-gallery-cone.jpg 1440w, 
       ./images/mobile/image-gallery-cone.jpg 750w"
-      src="./images/desktop/image-gallery-cone.jpg" alt=""
+      src="./images/desktop/image-gallery-cone.jpg" alt="gallery picture #3 ice cream cone"
       >
       <img srcset="./images/desktop/image-gallery-sugarcubes.jpg 1440w,
       ./images/mobile/image-gallery-milkbottles.jpg 750w"
-      src="./images/desktop/image-gallery-sugarcubes.jpg" alt=""
+      src="./images/desktop/image-gallery-sugarcubes.jpg" alt="gallery picture #4 sugar cubes"
       >
     </div>
     <nav>
-      <div class="logo"><img src="./images/logo.svg"></div>
+      <div class="logo">sunny</div>
       <ul class="links">
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Projects</a></li>
       </ul>
       <ul class="social-media">
-        <li><a href="#"><img src="./images/icon-facebook.svg" alt=""></a></li>
-        <li><a href="#"><img src="./images/icon-instagram.svg"></a></li>
-        <li><a href="#"><img src="./images/icon-pinterest.svg"></a></li>
-        <li><a href="#"><img src="./images/icon-twitter.svg"></a></li>
+        <li><a href="#"><img src="./images/icon-facebook.svg" alt="facebook logo"></a></li>
+        <li><a href="#"><img src="./images/icon-instagram.svg" alt="instagram logo"></a></li>
+        <li><a href="#"><img src="./images/icon-pinterest.svg" alt="pinterest logo"></a></li>
+        <li><a href="#"><img src="./images/icon-twitter.svg" alt="twitter logo"></a></li>
       </ul>
     </nav>
   </footer>
