Resolving html issues

--- a/index.html
+++ b/index.html
@@ -23,21 +23,23 @@
          <img srcset=
           "./images/desktop/image-header.jpg 1440w,
           ./images/mobile/image-header.jpg 850w" alt="hero image, an orange slice"
-          src="./images/mobile/image-header.jpg">
+          src="./images/mobile/image-header.jpg"
+          sizes="100vw, 100vw"
+          >
           <div class="caption">
             <h1>WE ARE CREATIVES</h1>
             <div onclick="scrollMain()">
-                <img src="./images/icon-arrow-down.svg" alt="arrow to main section">
+                <img src="./images/icon-arrow-down.svg" alt="arrow to main section" sizes="100vw">
             </div>
          </div>
       <nav>
         <a href="#">
-          <div class="logo"><img src="./images/logo.svg" alt="sunny logo"></div>
+          <div class="logo"><img src="./images/logo.svg" alt="sunny logo" sizes="100vw"></div>
         </a>
           <a id="mb-button">
-            <span id="mb-button-bar"></span>
-            <span id="mb-button-bar"></span>
-            <span id="mb-button-bar"></span>
+            <span class="mb-button-bar"></span>
+            <span class="mb-button-bar"></span>
+            <span class="mb-button-bar"></span>
           </a>
         <ul>
           <!--Triangle for the mobile menu-->
@@ -69,6 +71,7 @@
         <img srcset="./images/desktop/image-transform.jpg 1440w,
         ./images/mobile/image-transform.jpg 750w" alt="learn more picture #1"
         src="./images/desktop/image-transform.jpg"
+        sizes="100vw, 100vw"
         >
       </aside >
 
@@ -87,13 +90,16 @@
       <aside class="hero-learnmore two pic">
         <img srcset="./images/desktop/image-stand-out.jpg 1440w,
         ./images/mobile/image-stand-out.jpg 750w" alt="learn more picture #2"
-        src="./images/desktop/image-stand-out.jpg">
+        src="./images/desktop/image-stand-out.jpg"
+        sizes="100vw, 100vw"
+        >
       </aside>
       <!--With caption inside-->
       <aside class="hero-learnmore-wcaption-one">
         <img srcset="./images/desktop/image-graphic-design.jpg 1440w,
         ./images/mobile/image-graphic-design.jpg 1100w" alt="learn more picture with caption #1"
         src="./images/desktop/image-graphic-design.jpg"
+        sizes="100vw, 100vw"
         >
         <div class="caption">
           <h3>Graphic Design</h3>
@@ -104,6 +110,7 @@
         <img srcset="./images/desktop/image-photography.jpg 1440w,
         ./images/mobile/image-photography.jpg 1100w" alt="learn more picture with caption #2"
         src="./images/desktop/image-photography.jpg"
+        sizes="100vw, 100vw"
         >
         <div class="caption">
           <h3>Photography</h3>
@@ -118,7 +125,7 @@
     <h2>CLIENT TESTIMONIALS</h2>
     <div class="client-wraper">
       <div class="client">
-        <img src="./images/image-emily.jpg" alt="client Emily picture">
+        <img src="./images/image-emily.jpg" alt="client Emily picture" sizes="50px">
         <p>
           We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
         </p>
@@ -126,7 +133,7 @@
         <h5>Marketin Director</h5>
       </div>
       <div class="client">
-        <img src="./images/image-thomas.jpg" alt="client Thomas picture">
+        <img src="./images/image-thomas.jpg" alt="client Thomas picture" sizes="50px">
         <p>
           Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
         </p>
@@ -134,7 +141,7 @@
         <h5>Chief Operating Officer</h5>
      </div>
       <div class="client">
-        <img src="./images/image-jennie.jpg" alt="client Jennie picture">
+        <img src="./images/image-jennie.jpg" alt="client Jennie picture" sizes="50px">
         <p>
           Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
         </p>
@@ -150,18 +157,22 @@
       <img srcset="./images/desktop/image-gallery-milkbottles.jpg 1440w, 
       ./images/mobile/image-gallery-milkbottles.jpg 750w"
       src="./images/desktop/image-gallery-milkbottles.jpg" alt="gallery picture #1 milk bottles"
+      sizes="100vw, 100vw"
       >
       <img srcset="./images/desktop/image-gallery-orange.jpg 1440w, 
       ./images/mobile/image-gallery-orange.jpg 750w"
       src="./images/desktop/image-gallery-orange.jpg" alt="gallery picture #2 orange sliDe"
+      sizes="100vw, 100vw"
       >
       <img srcset="./images/desktop/image-gallery-cone.jpg 1440w, 
       ./images/mobile/image-gallery-cone.jpg 750w"
       src="./images/desktop/image-gallery-cone.jpg" alt="gallery picture #3 ice cream cone"
+      sizes="100vw, 100vw"
       >
       <img srcset="./images/desktop/image-gallery-sugarcubes.jpg 1440w,
       ./images/mobile/image-gallery-milkbottles.jpg 750w"
       src="./images/desktop/image-gallery-sugarcubes.jpg" alt="gallery picture #4 sugar cubes"
+      sizes="100vw, 100vw"
       >
     </div>
     <nav>
@@ -172,10 +183,10 @@
         <li><a href="#">Projects</a></li>
       </ul>
       <ul class="social-media">
-        <li><a href="#"><img src="./images/icon-facebook.svg" alt="facebook logo"></a></li>
-        <li><a href="#"><img src="./images/icon-instagram.svg" alt="instagram logo"></a></li>
-        <li><a href="#"><img src="./images/icon-pinterest.svg" alt="pinterest logo"></a></li>
-        <li><a href="#"><img src="./images/icon-twitter.svg" alt="twitter logo"></a></li>
+        <li><a href="#"><img src="./images/icon-facebook.svg" alt="facebook logo" sizes="20px"></a></li>
+        <li><a href="#"><img src="./images/icon-instagram.svg" alt="instagram logo" sizes="20px"></a></li>
+        <li><a href="#"><img src="./images/icon-pinterest.svg" alt="pinterest logo" sizes="20px"></a></li>
+        <li><a href="#"><img src="./images/icon-twitter.svg" alt="twitter logo" sizes="20px"></a></li>
       </ul>
     </nav>
   </footer>
