--- a/index.html
+++ b/index.html
@@ -20,21 +20,22 @@
   <header>
     <section class="hero">
      <div class="hero-img">
-         <img srcset=
+         <img 
+          sizes="100vw, 100vw"
+          srcset=
           "./images/desktop/image-header.jpg 1440w,
           ./images/mobile/image-header.jpg 850w" alt="hero image, an orange slice"
           src="./images/mobile/image-header.jpg"
-          sizes="100vw, 100vw"
           >
           <div class="caption">
             <h1>WE ARE CREATIVES</h1>
             <div onclick="scrollMain()">
-                <img src="./images/icon-arrow-down.svg" alt="arrow to main section" sizes="100vw">
+                <img src="./images/icon-arrow-down.svg" alt="arrow to main section">
             </div>
          </div>
       <nav>
         <a href="#">
-          <div class="logo"><img src="./images/logo.svg" alt="sunny logo" sizes="100vw"></div>
+          <div class="logo"><img src="./images/logo.svg" alt="sunny logo"></div>
         </a>
           <a id="mb-button">
             <span class="mb-button-bar"></span>
@@ -68,10 +69,11 @@
       </aside>
 
       <aside class="hero-learnmore one pic">
-        <img srcset="./images/desktop/image-transform.jpg 1440w,
+        <img 
+        sizes="100vw, 100vw"
+        srcset="./images/desktop/image-transform.jpg 1440w,
         ./images/mobile/image-transform.jpg 750w" alt="learn more picture #1"
         src="./images/desktop/image-transform.jpg"
-        sizes="100vw, 100vw"
         >
       </aside >
 
@@ -88,18 +90,20 @@
       </aside>
 
       <aside class="hero-learnmore two pic">
-        <img srcset="./images/desktop/image-stand-out.jpg 1440w,
+        <img 
+        sizes="100vw, 100vw"
+        srcset="./images/desktop/image-stand-out.jpg 1440w,
         ./images/mobile/image-stand-out.jpg 750w" alt="learn more picture #2"
         src="./images/desktop/image-stand-out.jpg"
-        sizes="100vw, 100vw"
         >
       </aside>
       <!--With caption inside-->
       <aside class="hero-learnmore-wcaption-one">
-        <img srcset="./images/desktop/image-graphic-design.jpg 1440w,
+        <img 
+        sizes="100vw, 100vw"
+        srcset="./images/desktop/image-graphic-design.jpg 1440w,
         ./images/mobile/image-graphic-design.jpg 1100w" alt="learn more picture with caption #1"
         src="./images/desktop/image-graphic-design.jpg"
-        sizes="100vw, 100vw"
         >
         <div class="caption">
           <h3>Graphic Design</h3>
@@ -107,10 +111,11 @@
         </div>
       </aside>
       <aside class="hero-learnmore-wcaption-two">
-        <img srcset="./images/desktop/image-photography.jpg 1440w,
+        <img 
+        sizes="100vw, 100vw"
+        srcset="./images/desktop/image-photography.jpg 1440w,
         ./images/mobile/image-photography.jpg 1100w" alt="learn more picture with caption #2"
         src="./images/desktop/image-photography.jpg"
-        sizes="100vw, 100vw"
         >
         <div class="caption">
           <h3>Photography</h3>
@@ -154,25 +159,29 @@
   <!--Footer-->
   <footer>
     <div class="gallery">
-      <img srcset="./images/desktop/image-gallery-milkbottles.jpg 1440w, 
+      <img 
+      sizes="100vw, 100vw"
+      srcset="./images/desktop/image-gallery-milkbottles.jpg 1440w, 
       ./images/mobile/image-gallery-milkbottles.jpg 750w"
       src="./images/desktop/image-gallery-milkbottles.jpg" alt="gallery picture #1 milk bottles"
-      sizes="100vw, 100vw"
       >
-      <img srcset="./images/desktop/image-gallery-orange.jpg 1440w, 
+      <img 
+      sizes="100vw, 100vw"
+      srcset="./images/desktop/image-gallery-orange.jpg 1440w, 
       ./images/mobile/image-gallery-orange.jpg 750w"
       src="./images/desktop/image-gallery-orange.jpg" alt="gallery picture #2 orange sliDe"
-      sizes="100vw, 100vw"
       >
-      <img srcset="./images/desktop/image-gallery-cone.jpg 1440w, 
+      <img 
+      sizes="100vw, 100vw"
+      srcset="./images/desktop/image-gallery-cone.jpg 1440w, 
       ./images/mobile/image-gallery-cone.jpg 750w"
       src="./images/desktop/image-gallery-cone.jpg" alt="gallery picture #3 ice cream cone"
-      sizes="100vw, 100vw"
       >
-      <img srcset="./images/desktop/image-gallery-sugarcubes.jpg 1440w,
+      <img 
+      sizes="100vw, 100vw"
+      srcset="./images/desktop/image-gallery-sugarcubes.jpg 1440w,
       ./images/mobile/image-gallery-milkbottles.jpg 750w"
       src="./images/desktop/image-gallery-sugarcubes.jpg" alt="gallery picture #4 sugar cubes"
-      sizes="100vw, 100vw"
       >
     </div>
     <nav>
